--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,17 @@
                 </li>
             </ul>
         </div>
-	</nav>
+    </nav>
+    <div class="container">
+        <div class="card-deck">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Title</h5>
+                    <p class="card-text">Content</p>
+                </div>
+            </div>
+        </div>
+    </div>
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
