jlarafl account page zip

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                    <a class="nav-link" href="./pages/web.html" tabindex="-1" aria-disabled="true">Account</a>
                 </li>
             </ul>
         </div>
