--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -19,7 +19,7 @@
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Index</a>
+                    <a class="nav-link" href="../index.html">Index</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="./pages/homepage.html" tabindex="-1">Home<span class="sr-only">(current)</span></a>
