fixed serviceworker.js deleting due to cahce_name change

--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="../index.html">Index</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="./pages/homepage.html" tabindex="-1">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="homepage.html" tabindex="-1">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" tabindex="-2">Account</a>
@@ -156,7 +156,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="./index.js"></script>
-<script src="./app.js"></script>
+<script src=".././index.js"></script>
+<script src="../js/home.js"></script>
 </body>
 </html>
