--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="./pages/homepage.html" tabindex="-1">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/web.html" tabindex="-1">Account</a>
+                    <a class="nav-link" href="./pages/account.html" tabindex="-1">Account</a>
                 </li>
             </ul>
         </div>
