--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -25,8 +25,8 @@
                     <a class="nav-link" href="homepage.html" tabindex="-1">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-2">Account</a>
-                </li>
+                  <a class="nav-link" href="account.html" tabindex="-1">Account</a>
+              </li>
             </ul>
         </div>
     </nav>
