--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
                     <a class="nav-link" href="index.html">Index<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/homepage.html" tabindex="-1">Home</a>
+                    <a class="nav-link" href="/pages/homepage/homepage.html" tabindex="-1">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/account.html" tabindex="-1">Account</a>
+                    <a class="nav-link" href="/pages/account/account.html" tabindex="-1">Account</a>
                 </li>
             </ul>
         </div>
