--- a/public/pages/account/account.html
+++ b/public/pages/account/account.html
@@ -6,8 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-<link rel="stylesheet" href=".././css/account.css">
-<link rel="stylesheet" href=".././css/style.css">
+<link rel="stylesheet" href="/css/account.css">
+<link rel="stylesheet" href="/css/style.css">
 <title>Group A</title>
 </head>
 <body>
@@ -18,14 +18,14 @@
         </button>
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/index.html">Index</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/homepage/homepage.html" tabindex="-1">Home</a>
+                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Index<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/homepage.html" tabindex="-1">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/web.html" tabindex="-1">Account</a>
+                    <a class="nav-link" href="/pages/account/account.html" tabindex="-1">Account<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
@@ -88,6 +88,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src=".././js/account.js"></script>
+<script src="/js/account.js"></script>
 </body>
 </html>
