--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 <title>Group A</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" class="main-nav">
         <a class="navbar-brand">Group A</a>
-        <button class="navbar-toggler gb-primary" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="my-nav" class="collapse navbar-collapse">
@@ -31,7 +31,7 @@
         </div>
     </nav>
     <main role="main">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
               <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -39,7 +39,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                <svg class="bg-carousel" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"></svg>
                 <div class="container">
                   <div class="carousel-caption text-left">
                     <h1>Example headline.</h1>
@@ -49,7 +49,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                <svg class="bg-carousel" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"></svg>
                 <div class="container">
                   <div class="carousel-caption">
                     <h1>Another example headline.</h1>
@@ -59,7 +59,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                <svg class="bg-carousel" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"></svg>
                 <div class="container">
                   <div class="carousel-caption text-right">
                     <h1>One more for good measure.</h1>
@@ -88,16 +88,10 @@
                         preserveAspectRatio="xMidYMid slice" 
                         focusable="false" role="img" 
                         aria-label="Placeholder: 140x140">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777"/>
-                        <text x="50%" y="50%" 
-                            fill="#777" dy=".3em">
-                            140x140
-                        </text>
                     </svg>
                 <h2>Heading</h2>
                 <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-secondary btn-color" href="#" role="button">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                     <svg class="bd-placeholder-img rounded-circle" 
@@ -106,16 +100,10 @@
                         preserveAspectRatio="xMidYMid slice" 
                         focusable="false" role="img" 
                         aria-label="Placeholder: 140x140">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777"/>
-                        <text x="50%" y="50%" 
-                            fill="#777" dy=".3em">
-                            140x140
-                        </text>
                     </svg>
                 <h2>Heading</h2>
                 <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-secondary btn-color" href="#" role="button">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                     <svg class="bd-placeholder-img rounded-circle" 
@@ -124,16 +112,10 @@
                         preserveAspectRatio="xMidYMid slice" 
                         focusable="false" role="img" 
                         aria-label="Placeholder: 140x140">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777"/>
-                        <text x="50%" y="50%" 
-                            fill="#777" dy=".3em">
-                            140x140
-                        </text>
                     </svg>
                 <h2>Heading</h2>
                 <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-secondary btn-color" href="#" role="button">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
         </div>
         <!-- articles -->
@@ -146,16 +128,13 @@
                 <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg 
+                <svg class="article-image1 bd-placeholder-img-lg 
                     articles-image img-fluid mx-auto" 
                     width="500" height="500" 
                     xmlns="http://www.w3.org/2000/svg" 
                     preserveAspectRatio="xMidYMid slice" 
                     focusable="false" role="img" 
                     aria-label="Placeholder: 500x500">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"/>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
                 </svg>
             </div>
         </div>
@@ -168,16 +147,13 @@
                 <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg 
+                <svg class="article-image2 bd-placeholder-img-lg 
                     articles-image img-fluid mx-auto" 
                     width="500" height="500" 
                     xmlns="http://www.w3.org/2000/svg" 
                     preserveAspectRatio="xMidYMid slice" 
                     focusable="false" role="img" 
                     aria-label="Placeholder: 500x500">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"/>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
                 </svg>
             </div>
         </div>
@@ -190,28 +166,26 @@
                 <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg 
+                <svg class="article-image3 bd-placeholder-img-lg 
                     articles-image img-fluid mx-auto" 
                     width="500" height="500" 
                     xmlns="http://www.w3.org/2000/svg" 
                     preserveAspectRatio="xMidYMid slice" 
                     focusable="false" role="img" 
                     aria-label="Placeholder: 500x500">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"/>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
                 </svg>
             </div>
         </div>
     </div><!-- /.container -->
-    <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-    </footer>
+
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="../app.js"></script>
 </body>
+<footer>
+    <p class="float-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+</footer>
 </html>
