--- a/public/pages/homepage/homepage.html
+++ b/public/pages/homepage/homepage.html
@@ -37,7 +37,7 @@
               <li data-target="#myCarousel" data-slide-to="1"></li>
               <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
-            <script id="hidden-template" type="text/carousel-article-template">
+            <script id="carousel-template" type="text/carousel-item-template">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
                 <div class="container">
                   <div class="carousel-caption text-left">
@@ -69,73 +69,32 @@
           </div>
     </main>
         <!-- articles -->
-    <div class="container">
-        <hr class="articles-divider">
-        <div class="row articles">
-            <div class="col-md-7">
-                <h2 class="articles-heading">First article's heading. 
-                    <span class="text-muted">It’ll blow your mind.</span>
-                </h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    <div id="article-container" class="container">
+        <script id="article-template" type="text/article-template">
+            <hr class="articles-divider">
+            <div class="row articles">
+                <div class="col-md-7">
+                    <h2 id="article-heading" class="articles-heading">First article's heading. 
+                        <span id="article-muted" class="text-muted">It’ll blow your mind.</span>
+                    </h2>
+                    <p id="article-lead" class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+                </div>
+                <div class="col-md-5">
+                    <svg id="article-img" class="bd-placeholder-img bd-placeholder-img-lg 
+                        articles-image img-fluid mx-auto" 
+                        width="500" height="500" 
+                        xmlns="http://www.w3.org/2000/svg" 
+                        preserveAspectRatio="xMidYMid slice" 
+                        focusable="false" role="img" 
+                        aria-label="Placeholder: 500x500">
+                        <title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="#eee"/>
+                        <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+                    </svg>
+                </div>
             </div>
-            <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg 
-                    articles-image img-fluid mx-auto" 
-                    width="500" height="500" 
-                    xmlns="http://www.w3.org/2000/svg" 
-                    preserveAspectRatio="xMidYMid slice" 
-                    focusable="false" role="img" 
-                    aria-label="Placeholder: 500x500">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"/>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
-            </div>
-        </div>
-        <hr class="articles-divider">
-        <div class="row articles">
-            <div class="col-md-7">
-                <h2 class="articles-heading">Second article's heading. 
-                    <span class="text-muted">It’ll blow your mind.</span>
-                </h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-            </div>
-            <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg 
-                    articles-image img-fluid mx-auto" 
-                    width="500" height="500" 
-                    xmlns="http://www.w3.org/2000/svg" 
-                    preserveAspectRatio="xMidYMid slice" 
-                    focusable="false" role="img" 
-                    aria-label="Placeholder: 500x500">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"/>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
-            </div>
-        </div>
-        <hr class="articles-divider">
-        <div class="row articles">
-            <div class="col-md-7">
-                <h2 class="articles-heading">Third article's heading. 
-                    <span class="text-muted">It’ll blow your mind.</span>
-                </h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-            </div>
-            <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg 
-                    articles-image img-fluid mx-auto" 
-                    width="500" height="500" 
-                    xmlns="http://www.w3.org/2000/svg" 
-                    preserveAspectRatio="xMidYMid slice" 
-                    focusable="false" role="img" 
-                    aria-label="Placeholder: 500x500">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"/>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
-            </div>
-        </div>
+        </script>
+        
     </div><!-- /.container -->
     <footer class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
