--- a/public/pages/homepage/homepage.html
+++ b/public/pages/homepage/homepage.html
@@ -38,7 +38,7 @@
               <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
             <script id="carousel-template" type="text/carousel-item-template">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                <svg class="bg-carousel" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"></svg>
                 <div class="container">
                   <div class="carousel-caption text-left">
                     <h1 id="carousel-headline"></h1>
