--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <title>Group A</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" class="main-nav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top main-nav">
         <a class="navbar-brand">Group A</a>
         <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -192,7 +192,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="/app.js"></script>
+<script src="app.js"></script>
+<script src="./js/common/navbar.js"></script>
 </body>
 <footer>
     <p class="float-right"><a href="#">Back to top</a></p>
