--- a/public/pages/account/account.html
+++ b/public/pages/account/account.html
@@ -11,9 +11,9 @@
 <title>Group A</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top main-nav">
         <a class="navbar-brand">Group A</a>
-        <button class="navbar-toggler gb-primary" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="my-nav" class="collapse navbar-collapse">
@@ -33,9 +33,9 @@
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Account Settings</h1>
         <p class="lead">Manage your account settings and preferences.</p>
-        </div>
+    </div>
 
-        <div class="container">
+    <div class="container">
         <div class="card-deck mb-3 text-center">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
@@ -80,14 +80,16 @@
                 </div>
             </div>
         </div>
-        <footer class="container">
-                <p class="float-right"><a href="#">Back to top</a></p>
-                <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-            </footer>
-	
+    </div><!-- /.container -->
+        
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="/js/account.js"></script>
+<script src="/js/common/navbar.js"></script>
 </body>
+<footer>
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
 </html>
