--- a/public/pages/homepage/homepage.html
+++ b/public/pages/homepage/homepage.html
@@ -100,7 +100,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="/index.js"></script>
+<script src="/js/common/navbar.js"></script>
 <script src="/js/home.js"></script>
 </body>
 <footer>
