Commiting work done before AppManafest fork.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 <link rel="stylesheet" href="/css/index.css">
 <link rel="stylesheet" href="/css/style.css">
+<script src="./js/my-news-store.js"></script>
 <title>Group A</title>
 </head>
 <body>
@@ -138,6 +139,7 @@
 <script src="app.js"></script>
 <script src="./js/common/navbar.js"></script>
 <script src="index.js"></script>
+<script src="./js/my-news.js"></script>
 </body>
 <footer>
     <p class="float-right"><a href="#">Back to top</a></p>
