Still fighting getMyNews is not defined, otherwise ServerDb completed

--- a/public/pages/homepage/homepage.html
+++ b/public/pages/homepage/homepage.html
@@ -4,12 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="manifest" href="/public/manifest.json">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 <link rel="stylesheet" href="/css/index.css">
 <link rel="stylesheet" href="/css/style.css">
 <title>Group A</title>
+<meta name="theme-color" content="rgb(47, 118, 185)">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/010-newspaper.png">
+<link rel="icon" type="image/png" href="/img/010-newspaper.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/img/010-newspaper.png" sizes="16x16">
+<link rel="shortcut icon" href="img/010-newspaper.png">
+<link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -94,12 +99,13 @@
         </script>
         
     </div><!-- /.container -->
-	
+<script src="/js/my-news-store.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="/js/common/navbar.js"></script>
 <script src="/js/home.js"></script>
+<script src="/js/my-news.js"></script>
 </body>
 <footer>
   <p class="float-right"><a href="#">Back to top</a></p>
