--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="manifest" href="/manifest.json">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 <link rel="stylesheet" href="/css/index.css">
 <link rel="stylesheet" href="/css/style.css">
 <script src="./js/my-news-store.js"></script>
 <title>Group A</title>
+<meta name="theme-color" content="rgb(47, 118, 185)">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/010-newspaper.png">
+<link rel="icon" type="image/png" href="/img/010-newspaper.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/img/010-newspaper.png" sizes="16x16">
+<link rel="shortcut icon" href="img/010-newspaper.png">
+<link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top main-nav">
@@ -145,5 +150,7 @@
 <footer>
     <p class="float-right"><a href="#">Back to top</a></p>
     <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/smalllikeart" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/"             title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"             title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+
 </footer>
 </html>
