--- a/public/pages/homepage/homepage.html
+++ b/public/pages/homepage/homepage.html
@@ -15,6 +15,7 @@
 <link rel="icon" type="image/png" href="/img/010-newspaper.png" sizes="16x16">
 <link rel="shortcut icon" href="img/010-newspaper.png">
 <link rel="manifest" href="/manifest.json">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -105,7 +106,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="/js/common/navbar.js"></script>
 <script src="/js/home.js"></script>
-<script src="/js/my-news.js"></script>
+<!--<script src="/js/my-news.js"></script>-->
 </body>
 <footer>
   <p class="float-right"><a href="#">Back to top</a></p>
